# Stellaris-flag-check

./: LICENSE  README.md  back.py  color.json  flags.yaml  front.py  pyproject.toml  requirements.txt  runwindows.bat  stellaris-flag-check.spec  test.py
database/: init_script.sql
